CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.20rc1

	- The scheduler could hang in a call to localtime() when
	  logging messages from the signal handler (STR #242)
	- The PDF filter no longer prints form widgets; this
	  duplicates the behavior of Acrobat Reader (STR #241)
	- cupsGetPPD() didn't handle a late termination of a
	  HTTP connection with the server (STR #220)
	- ppdOpen() did not correctly check for "*PPD-Adobe-4."
	  on the first line of a PPD file. This caused incorrect
	  PASS results for some PPD files (STR #233)
	- cupsEncodeOptions() did not allow boolean options to
	  use "yes" and "on" for true values (STR #227)
	- The pstops filter only sent the TBCP exit sequence if
	  it was defined in the JCLEnd attribute in the PPD file
	  (STR #224)
	- Support for more than 1024 files was broken on Solaris
	  9 (STR #217)
	- The setgroups() calls now pass in 1 group (the
	  configured group) instead of 0 for compatibility with
	  BSD and Darwin (STR #213)
	- The scheduler's built-in broadcast throttling was
	  ineffective since incoming packets would cause the
	  next group of outgoing packets to be sent immediately
	  rather than waiting for the next time slot (STR #211)
	- Added a new ppdSetConformance() function to set the
	  conformance requirements for PPD files. Currently only
	  two levels are defined, PPD_CONFORM_RELAXED and
	  PPD_CONFORM_STRICT, and the default is the relaxed
	  level (STR #212)
	- The IPP backend did not correctly execute the
	  pictwpstops filter on OSX (STR #210)
	- The LPD backend did not set the banner class when the
	  "banner=yes" option was specified in the device URI
	  (STR #209)
	- The imagetoraster filter did not support all of the
	  page device attributes (STR #208)
	- The pdftops filter incorrectly auto-rotated pages when
	  the user already had specified the proper orientation
	  (STR #207)
	- Fixed AIX shared library support (STR #201)
	- Added support for live testing with Valgrind (STR
	  #193)